objects/ffct__BundleSubComponent__c.object
<CustomObject>
    <customHelpPage>ffct__bundlecomponentonlinehelp</customHelpPage>
    <description>Information about a bundle sub component.</description>
    <fields>
        <fullName>ffct__AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__BundleComponent__c</fullName>
        <label>Bundle Component</label>
        <referenceTo>ffct__BundleComponent__c</referenceTo>
        <relationshipLabel>Bundle Sub Components</relationshipLabel>
        <relationshipName>BundleSubComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__BundleSubComponentName__c</fullName>
        <description>Custom Name field added in order to cater with the need to store bigger sub component names.</description>
        <label>Bundle Sub Component Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__FilterBy__c</fullName>
        <description>stores the name of the recordtype,list view,fieldset...</description>
        <label>Filter By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Filter_By_Name__c</fullName>
        <description>Contains name for FilterBy field</description>
        <label>Filter By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__IsFilter__c</fullName>
        <label>Is Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overwrite target organization&apos;s metadata with this one. Overwrite can only be used with Permission sets and Profiles.</description>
        <inlineHelpText>Overwrite target organization&apos;s metadata with this one. Overwrite can only be used with Permission sets and Profiles.</inlineHelpText>
        <label>Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Type__c</fullName>
        <label>Type</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <label>Bundle Sub Component</label>
    <nameField>
        <label>Bundle Sub Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Sub Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>